      use in programming where ultimate speed is required.

      \item The formerly internal function 
      \code{.package_dependencies()} from package \pkg{tools} for 
      calculating (recursive) (reverse) dependencies on package databases 
      has been renamed to \code{package_dependencies()} and is now 
      exported.
    }
  }

  \subsection{PACKAGE parallel}{
    \itemize{
      \item There is a new function \code{mcmapply()}, a parallel version
      of \code{mapply()}, and a wrapper \code{mcMap()}, a parallel
      version of \code{Map()}.

      \item A default cluster can be registered by the new function
      \code{setDefaultCluster()}: this will be used by default in
      functions such as \code{parLapply()}.

      \item \code{clusterMap()} has a new argument \code{.scheduling} to
      allow the use of load-balancing.

      \item There are new load-balancing functions \code{parLapplyLB()}
      and \code{parSapplyLB()}.

      \item \code{makePSOCKCluster()} has a new option \code{useXDR =
	FALSE} which can be used to avoid byte-shuffling for
      serialization when all the nodes are known to little-endian (or
      all big-endian).

      \item \code{makeForkCluster()} and the multicore-based functions
      all use native byte order for serialization.
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item Non-ASCII vignettes without a declared encoding are no
      longer accepted.

      \item C/C++ code in packages is now compiled with \code{-NDEBUG}
      to mitigate against the C/C++ function \code{assert} being called
      in production use.  Developers can turn this off during package
      development with \code{PKG_CPPFLAGS = -UNDEBUG}.

      \item \command{R CMD INSTALL} has a new option \option{--dsym}
      which on Mac OS X (Darwin) dumps the symbols alongside the
      \file{.so} file: this is helpful when debugging with
      \command{valgrind} (and especially when installing packages into