@@ -12,7 +12,7 @@ export(abline, arrows, assocplot, axTicks, Axis, axis, axis.Date,
        polypath, rasterImage, rect, rug, screen, segments,
        smoothScatter, spineplot, split.screen, stars, stem, strheight,
        stripchart, strwidth, sunflowerplot, symbols, text, title,
-       xinch, xspline, xyinch, yinch)
+       xinch, xspline, xyinch, yinch, .filled.contour)
 
 # leave most of the default methods visible as people seem to call them.
 export(barplot.default, boxplot.default, boxplot.matrix,
