@@ -34,7 +34,7 @@ export(add.scope, add1, addmargins, aggregate, aggregate.data.frame,
        model.matrix.default, model.matrix.lm, model.offset,
        model.response, model.tables, model.weights, mvfft, na.action,
        na.exclude, na.fail, na.omit, na.pass, napredict, naprint,
-       naresid, nextn, nlm, nlminb, nobs, offset, optim, optimise,
+       naresid, nextn, nlm, nlminb, nobs, offset, optim, optimHess, optimise,
        optimize, p.adjust, p.adjust.methods, pbeta, pbinom, pcauchy,
        pchisq, pexp, pf, pgamma, pgeom, phyper, plnorm, plogis,
        plot.density, plot.lm, plot.mlm, plot.ts, plot.TukeyHSD,
